get allTickets